feat: add style.css file and added some information

--- a/index.html
+++ b/index.html
@@ -2,9 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="style.css">
+    <title>CV Sabitov Tilek</title>
 </head>
 <body>
+<header>
+    <h1>Curriculum vitae</h1>
+
+    <h3>Information</h3>
+    <hr>
+    <ul>
+        <li><b>Name:</b> Tilek</li>
+        <li><b>Surname:</b> Sabitov</li>
+        <li><b>Date of birth:</b> 21 October 1992</li>
+        <li><b>Location:</b> Almaty, Kazakhstan</li>
+    </ul>
+    <hr>
+<h3>Contacts</h3>
+    <ul>
+        <li><b>Phone:</b> +7 (700) 253-54-56</li>
+        <li><b>E-mail:</b> bishhurricane92@gmail.com</li>
+        <li><b>Telegram:</b> Hurricane92</li>
+        <li><b>GIT:</b> <a href="https://github.com/bishhurricane92">bishhurricane92</a></li>
+    </ul>
+</header>
 
 </body>
 </html>
+
+<!--## Sabitov Tilek
+
+
+## Contacts
+* **E-mail:**     bishhurricane92@gmail.com
+* **Phone:**      +7 (700) 253-54-56
+* **Telegram:**   Hurricane92
+* **GIT:**        [bishhurricane92](https://github.com/bishhurricane92)
+* **Location:**   Almaty,Kazakhstan
+* **Discord:**    bishhurricane92
+
+
+## Information about me
+I have good personal skills, am an excellent team worker and very willing to learn.
+
+## Knowledge
++ HTML
++ CSS
++ JavaScript Basics
++ React.JS
++ Preprocessors SaSS,ScSS
++ Git
++ VS Code, IntelliJ IDEA
+
+## Code Example
+```
+let a = 1;
+let b = 2;
+
+function sum (a,b) {
+let sum = a + b;
+console.log (sum) };
+```
+
+## Experience
++ Engineer of Project Implementaion Group CASA-1000
++ Design Engineer of Design Bureau
+
+
+## Education
+Moscow Power Engineering Institute (Moscow, Russia)
+Bachelor Degree
+
+## English
++ Upper Intermediate
+-->
