feat: finished CV

--- a/index.html
+++ b/index.html
@@ -18,60 +18,73 @@
         <li><b>Location:</b> Almaty, Kazakhstan</li>
     </ul>
     <hr>
-<h3>Contacts</h3>
+    <h3>Contacts</h3>
     <ul>
         <li><b>Phone:</b> +7 (700) 253-54-56</li>
         <li><b>E-mail:</b> bishhurricane92@gmail.com</li>
         <li><b>Telegram:</b> Hurricane92</li>
         <li><b>GIT:</b> <a href="https://github.com/bishhurricane92">bishhurricane92</a></li>
     </ul>
+    <hr>
 </header>
+<main>
+<h3>Knowledge</h3>
+    <ul>
+        <li><b>HTML</b> </li>
+        <li><b>CSS</b> </li>
+        <li><b>JavaScript Basics</b> </li>
+        <li><b>React.JS</b> </li>
+        <li><b>Preprocessors SaSS,ScSS</b> </li>
+        <li><b>Git</b> </li>
+        <li><b>VS Code, IntelliJ IDEA</b> </li>
+    </ul>
+    <hr>
 
+    <h3>Education</h3>
+    <ul>
+        <li><b>Moscow Power Engineering Institute (Moscow, Russia)
+            Bachelor Degree</b> </li>
+    </ul>
+    <hr>
+
+    <h3>Experience</h3>
+    <ul>
+        <li><b>Engineer of Project Implementaion Group CASA-1000</b> </li>
+        <li><b>Design Engineer of Design Bureau</b> </li>
+    </ul>
+    <hr>
+
+    <h3>Code Example</h3>
+   <p><code>
+       let a = 1;<br>
+       let b = 2;<br>
+
+       function sum (a,b) {<br>
+       let sum = a + b;<br>
+       console.log (sum)<br> }
+   </code></p>
+    <hr>
+    <h3>Information about me</h3>
+    <ul>
+        <li><b>I have good personal skills, am an excellent team worker and very willing to learn.</b> </li>
+    </ul>
+    <hr>
+    <h3>English</h3>
+    <ul>
+        <li><b>Upper Intermediate</b> </li>
+    </ul>
+    <hr>
+
+</main>
 </body>
 </html>
 
-<!--## Sabitov Tilek
-
-
-## Contacts
-* **E-mail:**     bishhurricane92@gmail.com
-* **Phone:**      +7 (700) 253-54-56
-* **Telegram:**   Hurricane92
-* **GIT:**        [bishhurricane92](https://github.com/bishhurricane92)
-* **Location:**   Almaty,Kazakhstan
-* **Discord:**    bishhurricane92
 
 
 ## Information about me
 I have good personal skills, am an excellent team worker and very willing to learn.
 
-## Knowledge
-+ HTML
-+ CSS
-+ JavaScript Basics
-+ React.JS
-+ Preprocessors SaSS,ScSS
-+ Git
-+ VS Code, IntelliJ IDEA
 
-## Code Example
-```
-let a = 1;
-let b = 2;
-
-function sum (a,b) {
-let sum = a + b;
-console.log (sum) };
-```
-
-## Experience
-+ Engineer of Project Implementaion Group CASA-1000
-+ Design Engineer of Design Bureau
-
-
-## Education
-Moscow Power Engineering Institute (Moscow, Russia)
-Bachelor Degree
 
 ## English
 + Upper Intermediate
